{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 874,
  "lineage": "5a3e8510-c0c2-b57e-ccb0-88794d87f0b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb-hw36",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:273043149442:loadbalancer/app/terraform-alb-hw36/fcedecca439c1dc3",
            "arn_suffix": "app/terraform-alb-hw36/fcedecca439c1dc3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-alb-hw36-614745832.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:273043149442:loadbalancer/app/terraform-alb-hw36/fcedecca439c1dc3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-alb-hw36",
            "security_groups": [
              "sg-0dc75ba828cd917ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036a4c2c31ade7c52"
              },
              {
                "subnet_id": "subnet-056c2248e69fa13e4"
              }
            ],
            "subnets": [
              "subnet-036a4c2c31ade7c52",
              "subnet-056c2248e69fa13e4"
            ],
            "tags": {
              "Name": "terraform-alb-hw36"
            },
            "tags_all": {
              "Name": "terraform-alb-hw36"
            },
            "vpc_id": "vpc-0b063907086a015e6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg_hw36_for_alb_only",
            "aws_subnet.subnet-hw36",
            "aws_vpc.vpc-for-hw36",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway-hw36",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273043149442:internet-gateway/igw-06228567a31d6576c",
            "id": "igw-06228567a31d6576c",
            "owner_id": "273043149442",
            "tags": {
              "Name": "gateway-hw36"
            },
            "tags_all": {
              "Name": "gateway-hw36"
            },
            "vpc_id": "vpc-0b063907086a015e6"
          },
          "dependencies": [
            "aws_vpc.vpc-for-hw36"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener-hw36-port80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:273043149442:listener/app/terraform-alb-hw36/fcedecca439c1dc3/966e0793850e49e4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:273043149442:targetgroup/target-group-hw36/f00405dd6f41f86a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:273043149442:listener/app/terraform-alb-hw36/fcedecca439c1dc3/966e0793850e49e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:273043149442:loadbalancer/app/terraform-alb-hw36/fcedecca439c1dc3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb-hw36",
            "aws_lb_target_group.traget-group-hw36",
            "aws_security_group.sg_hw36_for_alb_only",
            "aws_subnet.subnet-hw36",
            "aws_vpc.vpc-for-hw36",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "traget-group-hw36",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:273043149442:targetgroup/target-group-hw36/f00405dd6f41f86a",
            "arn_suffix": "targetgroup/target-group-hw36/f00405dd6f41f86a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:273043149442:targetgroup/target-group-hw36/f00405dd6f41f86a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-hw36",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b063907086a015e6"
          },
          "dependencies": [
            "aws_vpc.vpc-for-hw36"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "rote-table-association-hw36",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0b9e2d9fa4291fd",
            "original_route_table_id": "rtb-0b3639ec2990d7185",
            "route_table_id": "rtb-087cb127c43cc0c80",
            "vpc_id": "vpc-0b063907086a015e6"
          },
          "dependencies": [
            "aws_route_table.route-table-hw36",
            "aws_vpc.vpc-for-hw36"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-gateway-hw36",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06228567a31d6576c",
            "id": "r-rtb-087cb127c43cc0c801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-087cb127c43cc0c80",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway-hw36",
            "aws_route_table.route-table-hw36",
            "aws_vpc.vpc-for-hw36"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-hw36",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273043149442:route-table/rtb-087cb127c43cc0c80",
            "id": "rtb-087cb127c43cc0c80",
            "owner_id": "273043149442",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route-table-hw36"
            },
            "tags_all": {
              "Name": "route-table-hw36"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b063907086a015e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-for-hw36"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_hw36_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273043149442:security-group/sg-044b9061cd9ba8621",
            "description": "Traffic 80,22 and icmp only internal network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044b9061cd9ba8621",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_hw36",
            "name_prefix": "",
            "owner_id": "273043149442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-hw36-alb-security-group"
            },
            "tags_all": {
              "Name": "terraform-hw36-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b063907086a015e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-for-hw36"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_hw36_for_alb_only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273043149442:security-group/sg-0dc75ba828cd917ae",
            "description": "Traffic 80 only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc75ba828cd917ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_hw36_alb_only",
            "name_prefix": "",
            "owner_id": "273043149442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_hw36_for_alb_only"
            },
            "tags_all": {
              "Name": "sg_hw36_for_alb_only"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b063907086a015e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-for-hw36"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-hw36",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273043149442:subnet/subnet-056c2248e69fa13e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056c2248e69fa13e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273043149442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-hw36"
            },
            "tags_all": {
              "Name": "subnet-hw36"
            },
            "vpc_id": "vpc-0b063907086a015e6"
          },
          "dependencies": [
            "aws_vpc.vpc-for-hw36",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273043149442:subnet/subnet-036a4c2c31ade7c52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036a4c2c31ade7c52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273043149442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-hw36"
            },
            "tags_all": {
              "Name": "subnet-hw36"
            },
            "vpc_id": "vpc-0b063907086a015e6"
          },
          "dependencies": [
            "aws_vpc.vpc-for-hw36",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-for-hw36",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273043149442:vpc/vpc-0b063907086a015e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09883f5d4bed0fe7d",
            "default_route_table_id": "rtb-0b3639ec2990d7185",
            "default_security_group_id": "sg-0e7111cc04232ba43",
            "dhcp_options_id": "dopt-036559779827f145d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b063907086a015e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3639ec2990d7185",
            "owner_id": "273043149442",
            "tags": {
              "Name": "vpc-for-hw36"
            },
            "tags_all": {
              "Name": "vpc-for-hw36"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}